cabal-version:      3.0
name:               nvidia-dev
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             cidkidnix
maintainer:         cidkidnix@protonmail.com
-- copyright:
category:           Nvidia "/dev/*" populator
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable nvidia-dev
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base,
                      unix,
                      text,
                      process,
                      directory

    hs-source-dirs:   exe
    default-language: Haskell2010
